--- a/admin.html
+++ b/admin.html
@@ -27,6 +27,7 @@
                 <input type="text" id="inputSenha" disabled placeholder="Digite a senha"><br>
                 <button onclick="buscarUsuario()">Buscar usuário</button>
                 <button id="botaoAtualizarDados" onclick="mudarUsuario()" disabled>Mudar informações</button>
+                <button id="botaoDeletar" disabled onclick="deletarDados()">Deletar usuário</button>
             </fieldset>
         </div>
         <table>
